# ensembl-orm

./: .env.example  .gitignore  .markdownlint.json  404.html  AGENTS.md  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  opencode.json  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  lint.yml  release.yml  test.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_009.md  task_010.md  task_011.md  task_012.md  task_013.md  task_014.md  task_015.md  task_016.md  tasks.json
api-reference/: index.html
configuration/: index.html
development-workflow/: index.html
docs/: api-reference.md  configuration.md  development-workflow.md  getting-started.md  index.md  models.md  querying.md  testing.md
getting-started/: index.html
models/: index.html
querying/: index.html
search/: search_index.json
src/ensembl_orm/: __init__.py  discovery.py  enums.py  exceptions.py  session.py
src/ensembl_orm/config/: __init__.py  database_settings.py
src/ensembl_orm/models/: __init__.py  external_db.py  gene.py  karyotype.py  object_xref.py  seq_region.py  seq_region_attrib.py  xref.py
stylesheets/: extra.css
testing/: index.html
tests/: conftest.py  test_boilerplate.py  test_database_settings.py  test_directory_structure.py  test_discovery.py  test_enums.py  test_implementation.py  test_integration.py  test_public_api_exports.py  test_pyproject.py  test_session.py
tests/models/: test_external_db.py  test_gene.py  test_karyotype.py  test_model_exports.py  test_object_xref.py  test_seq_region.py  test_seq_region_attrib.py  test_xref.py
