[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ensembl-orm"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "mysqlclient>=2.2.0",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.33",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/ensembl_orm"]

[tool.ruff]
line-length = 120
target-version = "py313"
