[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ensembl-orm"
version = "0.5.1"
description = "Read-only SQLAlchemy ORM for the Ensembl homo_sapiens_core MySQL database."
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "db-common>=0.1.0",
    "mysqlclient>=2.2.0",
    "sqlalchemy>=2.0.46",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.12",
]
docs = [
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=1.0",
]



[tool.uv.sources]
# Pinned to an immutable tag on HGNC/db-common (never a moving branch).
db-common = { git = "https://github.com/HGNC/db-common.git", tag = "v0.1.0" }





[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/ensembl_orm"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore(release): {version} [skip ci]"
major_on_zero = true
